personal statement page added

--- a/src/app/components/personal-statement/index.html
+++ b/src/app/components/personal-statement/index.html
@@ -1,1 +1,12 @@
-<h1>Hello world</h1>
+<div layout="vertical" layout-fill>
+  <md-content layout="row">
+
+    <div flex="20"></div>
+    <div flex="60">
+      <div ng-bind-html="vm.f.data"></div>
+    </div>
+    <div flex="20"></div>
+
+
+    </md-content>
+</div>
