--- a/src/app/components/personal-statement/index.html
+++ b/src/app/components/personal-statement/index.html
@@ -1,11 +1,13 @@
+<ek-header></ek-header>
+
 <div layout="vertical" layout-fill>
   <md-content layout="row">
 
-    <div flex="20"></div>
-    <div flex="60">
+    <div flex="20" flex-sm="5"></div>
+    <div flex="60" flex-sm="90">
       <div ng-bind-html="vm.f.data"></div>
     </div>
-    <div flex="20"></div>
+    <div flex="20" flex-sm="5"></div>
 
 
     </md-content>
