--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -5,7 +5,7 @@
       <acme-navbar creation-date="main.creationDate"></acme-navbar>
     </header>
 
-    <section class="jumbotron">
+    <!-- <section class="jumbotron">
       <h1>'Allo, 'Allo!</h1>
       <p class="lead">
         <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
@@ -28,7 +28,7 @@
           <md-button ng-href="{{ awesomeThing.url }}">Website</md-button>
         </div>
       </md-card>
-    </div>
+    </div> -->
   </md-content>
 
 </div>
