layout sorted, unused elements removed

--- a/src/app/components/personal-statement/index.html
+++ b/src/app/components/personal-statement/index.html
@@ -1,14 +1,12 @@
-<ek-header></ek-header>
+<!-- <div layout="vertical" layout-fill> -->
+  <md-content layout-padding layout="row">
 
-<div layout="vertical" layout-fill>
-  <md-content layout="row">
-
-    <div flex="20" flex-sm="5"></div>
-    <div flex="60" flex-sm="90">
+    <!-- <div flex="5" flex-sm="5"></div> -->
+    <!-- <div flex="90" flex-sm="90"> -->
       <div ng-bind-html="vm.f.data"></div>
     </div>
-    <div flex="20" flex-sm="5"></div>
+    <!-- <div flex="90" flex-sm="5"></div> -->
 
 
     </md-content>
-</div>
+<!-- </div> -->
