--- a/src/app/shared/directives/header/index.tpl.html
+++ b/src/app/shared/directives/header/index.tpl.html
@@ -1,8 +1,6 @@
-<md-toolbar layout="row" layout-align="center center">
-  <div flex="20" flex-sm="5"></div>
-  <div flex="60" flex-sm="90">
-
-    <h1>My CV</h1>
-  </div>
-  <div flex="20" flex-sm="5"></div>
+<md-toolbar layout="row" layout-padding>
+  <md-button class="menu" hide-gt-sm ng-click="vm.openLeftMenu()">
+    <md-icon md-font-icon="menu">menu</md-icon>
+  </md-button>
+  <h1>ngekcv2</h1>
 </md-toolbar>
