--- a/src/app/shared/directives/navigation/index.tpl.html
+++ b/src/app/shared/directives/navigation/index.tpl.html
@@ -35,5 +35,8 @@
     <md-list-item>
       <a ui-sref="personalStatement" ui-sref-active="active">Personal statement</a>
     </md-list-item>
+    <md-list-item>
+      <a ui-sref="skills" ui-sref-active="active">Skills</a>
+    </md-list-item>
   </md-list>
 </md-sidenav>
