--- a/src/app/shared/directives/navigation/index.tpl.html
+++ b/src/app/shared/directives/navigation/index.tpl.html
@@ -38,5 +38,8 @@
     <md-list-item>
       <a ui-sref="skills" ui-sref-active="active">Skills</a>
     </md-list-item>
+    <md-list-item>
+      <a ui-sref="portfolioItems" ui-sref-active="active">Portfolio Items</a>
+    </md-list-item>
   </md-list>
 </md-sidenav>
