work experience module added

--- a/src/app/shared/directives/navigation/index.tpl.html
+++ b/src/app/shared/directives/navigation/index.tpl.html
@@ -16,6 +16,9 @@
     <md-list-item>
       <a ui-sref="hobbies" ui-sref-active="active">Hobbies</a>
     </md-list-item>
+    <md-list-item>
+      <a ui-sref="workExperience" ui-sref-active="active">Work Experience</a>
+    </md-list-item>
   </md-list>
 </md-sidenav>
 
