all data retrieval in order

--- a/src/app/components/personal-statement/index.html
+++ b/src/app/components/personal-statement/index.html
@@ -3,7 +3,7 @@
 
     <!-- <div flex="5" flex-sm="5"></div> -->
     <!-- <div flex="90" flex-sm="90"> -->
-      <div ng-bind-html="vm.f.data"></div>
+      <div ng-bind-html="vm.f.personalStatement.data"></div>
     </div>
     <!-- <div flex="90" flex-sm="5"></div> -->
 
