main controller inits all factories

--- a/src/app/components/portfolio-items/index.html
+++ b/src/app/components/portfolio-items/index.html
@@ -16,7 +16,7 @@
             <span class="md-headline">Card header</span>
           </md-card-title-text>
         </md-card-title> -->
-        <img class="md-card-image" src="{{vm.settings.imgPath + item.screenshotname}}">
+        <img class="md-card-image" ng-src="{{vm.settings.imgPath + item.screenshotname}}">
         <md-card-content layout="row">
           <span>
             <strong>Loved: </strong>
