nav and homepage

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,1 +1,44 @@
-<!-- <img src="http://keligijus.github.io/assets/img/eligijus.jpg" alt=""> -->
+<div layout="row" layout-align="center">
+  <md-card flex flex-xs="90" flex-sm="90" flex-md="70" flex-gt-md="60" flex-gt-xl="30" layout-padding>
+    <md-card-title layout="row">
+      <md-card-title-text flex="65" style="padding-right:8px;">
+        <span class="md-headline">Eligijus Krėpšta</span>
+        <br>
+        <span class="md-subhead">Front End Geek</span>
+        <p>Capable AngularJS dev. Can't wait to get my hands dirty with Angular2.</p>
+        <p>Ready to join a team of great developers.</p>
+      </md-card-title-text>
+      <md-card-title-media flex="35">
+        <div class="md-media-sm card-media">
+          <img src="http://keligijus.github.io/assets/img/eligijus.jpg" alt="">
+        </div>
+      </md-card-title-media>
+    </md-card-title>
+    <md-card-actions class="small-buttons" layout="row" layout-align="start center">
+      <md-button href="https://github.com/keligijus" target="_blank">
+        <md-tooltip md-direction="top">
+          github.com/keligijus
+        </md-tooltip>
+        <i class="fa fa-github-square fa-2x" aria-hidden="true"></i>
+      </md-button>
+      <md-button href="https://www.linkedin.com/in/keligijus" target="_blank">
+        <md-tooltip md-direction="top">
+          lt.linkedin.com/in/keligijus
+        </md-tooltip>
+        <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+      </md-button>
+      <md-button href="tel:0037061421011">
+        <md-tooltip md-direction="top">
+          00370 614 21011
+        </md-tooltip>
+        <i class="fa fa-phone-square fa-2x" aria-hidden="true"></i>
+      </md-button>
+      <md-button href="mailto:k.eligijus@gmail.com">
+        <md-tooltip md-direction="top">
+          keligijus@gmail.com
+        </md-tooltip>
+        <i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i>
+      </md-button>
+    </md-card-actions>
+  </md-card>
+</div>
