--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -19,6 +19,17 @@
        url(../../bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.ttf) format('truetype');
 }
 
+@font-face {
+  font-family: "FontAwesome";
+  src: url("../../bower_components/components-font-awesome/fonts/fontawesome-webfont.eot");
+  src: url("../../bower_components/components-font-awesome/fonts/fontawesome-webfont.eot") format("embedded-opentype"),
+  url("../../bower_components/components-font-awesome/fonts/fontawesome-webfont.woff") format("woff"),
+  url("../../bower_components/components-font-awesome/fonts/fontawesome-webfont.ttf") format("truetype"),
+  url("../../bower_components/components-font-awesome/fonts/fontawesome-webfont.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
