--- a/src/app/components/skills/index.html
+++ b/src/app/components/skills/index.html
@@ -1,64 +1,65 @@
-<md-content layout-padding >
-
-  <!-- <pre>{{ vm.f.hardSkill.data | json }}</pre> -->
+<md-content layout-padding>
 
   <h2>Soft Skills</h2>
 
-  <md-card  ng-repeat="skill in vm.f.softSkill.data" layout-padding>
-    <md-card-title>
-      <md-card-title-text>
-        <span class="md-headline">{{ skill.trait }}</span><br>
-        <span class="md-subhead">{{ skill.whyuseful }}</span>
-      </md-card-title-text>
-      <!-- <md-card-title-media>
-        <div class="md-media-sm card-media"></div>
-      </md-card-title-media> -->
-    </md-card-title>
-  </md-card>
+  <div layout="row" layout-align="center start" layout-wrap>
+
+    <md-card  ng-repeat="skill in vm.f.softSkill.data" layout-padding flex="100" flex-gt-sm="45">
+      <md-card-title>
+        <md-card-title-text>
+          <span class="md-headline">{{ skill.trait }}</span><br>
+          <span class="md-subhead">{{ skill.whyuseful }}</span>
+        </md-card-title-text>
+        <!-- <md-card-title-media>
+          <div class="md-media-sm card-media"></div>
+        </md-card-title-media> -->
+      </md-card-title>
+    </md-card>
+
+  </div>
+
 
   <h2>Hard Skills</h2>
 
     <md-card ng-repeat="skill in vm.f.hardSkill.data" layout-padding>
+
         <md-card-header>
-          <!-- <md-card-avatar>
-            <img src="img/logo.svg">
-          </md-card-avatar> -->
           <md-card-header-text>
             <span class="md-title">{{ skill.toollangskillapiservice }}</span><br>
             <span class="md-subhead">{{ skill.levelofexperience }}</span>
           </md-card-header-text>
         </md-card-header>
-        <!-- <md-card-title>
-          <md-card-title-text>
-            <span class="md-headline">Card header</span>
-          </md-card-title-text>
-        </md-card-title> -->
-        <md-card-content layout="row">
-          <span>
-            <strong>Loved: </strong>
-          </span>
-          <span>
-            {{ skill.love }}
-          </span>
+
+        <md-card-content layout-xs="column" layout-gt-sm="row">
+          <div layout="row" flex="33">
+            <div class="skill-title">
+              <strong>Loved: </strong>
+            </div>
+            <div class="skill-content">
+              {{ skill.love }}
+            </div>
+          </div>
+          <div layout="row" flex="33">
+            <div class="skill-title">
+              <strong>Learned: </strong>
+            </div>
+            <div class="skill-content">
+              {{ skill.learned }}
+            </div>
+          </div>
+          <div layout="row" flex="33">
+            <div class="skill-title">
+              <strong>Loathed: </strong>
+            </div>
+            <div class="skill-content">
+              {{ skill.loathe }}
+            </div>
+          </div>
         </md-card-content>
-        <md-card-content layout="row">
-          <span>
-            <strong>Learned: </strong>
-          </span>
-          <span>
-            {{ skill.learned }}
-          </span>
-        </md-card-content>
-        <md-card-content layout="row">
-          <span>
-            <strong>Loathed: </strong>
-          </span>
-          <span>
-            {{ skill.loathe }}
-          </span>
-        </md-card-content>
+
          <md-card-actions layout="row" layout-align="end center">
-          <!-- <md-button
+          <md-button
+            ng-if="skill.linkstoliveprojects"
             href="{{ skill.linkstoliveprojects }}"
             class="md-raised md-primary md-button md-ink-ripple">
             Live project
@@ -66,10 +67,10 @@
             <path d="M0 0h24v24H0z" fill="none"/>
             <path d="M9 5v2h6.59L4 18.59 5.41 20 17 8.41V15h2V5z"/>
             </svg>
-          </md-button> -->
+          </md-button>
          </md-card-actions>
+
       </md-card>
-  </md-card>
 
 
 </md-content>
