--- a/src/app/components/work-experience/index.html
+++ b/src/app/components/work-experience/index.html
@@ -12,36 +12,36 @@
           </md-card-header-text>
         </md-card-header>
         <md-card-content layout="row">
-          <span>
+          <div class="ek-card-title">
             <strong>Loved: </strong>
-          </span>
-          <span>
+          </div>
+          <div class="ek-card-description">
             {{ item.loved }}
-          </span>
+          </div>
         </md-card-content>
         <md-card-content layout="row">
-          <span>
+          <div class="ek-card-title">
             <strong>Learned: </strong>
-          </span>
-          <span>
+          </div>
+          <div class="ek-card-description">
             {{ item.learned }}
-          </span>
+          </div>
         </md-card-content>
         <md-card-content layout="row">
-          <span>
+          <div class="ek-card-title">
             <strong>Left (why?): </strong>
-          </span>
-          <span>
+          </div>
+          <div class="ek-card-description">
             {{ item.leftwhy }}
-          </span>
+          </div>
         </md-card-content>
         <md-card-content layout="row">
-          <span>
+          <div class="ek-card-title">
             <strong>Day to day: </strong>
-          </span>
-          <span>
+          </div>
+          <div class="ek-card-description">
             {{ item.daytoday }}
-          </span>
+          </div>
         </md-card-content>
          <md-card-actions layout="row" layout-align="end center">
           <md-button
