--- a/src/app/components/hobbies/index.html
+++ b/src/app/components/hobbies/index.html
@@ -2,15 +2,18 @@
 
   <h2>Hobbies</h2>
 
-  <md-card  ng-repeat="hobby in vm.f.hobbies.data" layout-padding>
-        <md-card-header>
-          <md-card-header-text>
-            <span class="md-title">{{ hobby.hobby }}</span><br>
-            <span class="md-subhead">{{ hobby.comment }}</span>
-          </md-card-header-text>
-        </md-card-header>
-  </md-card>
+  <div layout="row" layout-align="center start" layout-wrap>
 
+    <md-card ng-repeat="hobby in vm.f.hobbies.data" layout-padding flex="45">
+      <md-card-header>
+        <md-card-header-text>
+          <span class="md-title">{{ hobby.hobby }}</span><br>
+          <span class="md-subhead">{{ hobby.comment }}</span>
+        </md-card-header-text>
+      </md-card-header>
+    </md-card>
+
+  </div>
 
 </md-content>
 
