--- a/src/app/components/hobbies/index.html
+++ b/src/app/components/hobbies/index.html
@@ -4,7 +4,7 @@
 
   <div layout="row" layout-align="center start" layout-wrap>
 
-    <md-card ng-repeat="hobby in vm.f.hobbies.data" layout-padding flex="45">
+    <md-card ng-repeat="hobby in vm.f.hobbies.data" layout-padding flex="100" flex-gt-sm="45">
       <md-card-header>
         <md-card-header-text>
           <span class="md-title">{{ hobby.hobby }}</span><br>
