cv.pdf and download link added

--- a/src/app/components/skills/index.html
+++ b/src/app/components/skills/index.html
@@ -31,7 +31,7 @@
         </md-card-header>
 
         <md-card-content layout-xs="column" layout-gt-sm="row">
-          <div layout="row" flex="33">
+          <div layout="row" flex="33" flex="noshrink">
             <div class="ek-card-title">
               <strong>Loved: </strong>
             </div>
@@ -39,7 +39,7 @@
               {{ skill.love }}
             </div>
           </div>
-          <div layout="row" flex="33">
+          <div layout="row" flex="33" flex="noshrink">
             <div class="ek-card-title">
               <strong>Learned: </strong>
             </div>
@@ -47,7 +47,7 @@
               {{ skill.learned }}
             </div>
           </div>
-          <div layout="row" flex="33">
+          <div layout="row" flex="33" flex="noshrink">
             <div class="ek-card-title">
               <strong>Loathed: </strong>
             </div>
