--- a/src/app/shared/directives/navigation/index.tpl.html
+++ b/src/app/shared/directives/navigation/index.tpl.html
@@ -19,5 +19,8 @@
     <md-list-item>
       <a ui-sref="hobbies" ui-sref-active="active">Hobbies</a>
     </md-list-item>
+    <md-list-item>
+      <a download href="assets/Eligijus-Krepsta-CV.pdf">Download CV</a>
+    </md-list-item>
   </md-list>
 </md-sidenav>
