social icons added to header

--- a/src/app/shared/directives/header/index.tpl.html
+++ b/src/app/shared/directives/header/index.tpl.html
@@ -10,8 +10,34 @@
       </a>
     </h2>
     <span flex></span>
-    <!-- <md-button class="md-icon-button" aria-label="Contacts">
-      <md-icon md-font-library="material-icons">contacts</md-icon>
-    </md-button> -->
+    <div class="small-buttons">
+      <md-button href="https://github.com/keligijus" target="_blank" hide show-gt-sm>
+        <md-tooltip md-direction="bottom">
+          github.com/keligijus
+        </md-tooltip>
+        <i class="fa fa-github-square fa-2x" aria-hidden="true"></i>
+      </md-button>
+
+      <md-button href="https://www.linkedin.com/in/keligijus" target="_blank" hide show-gt-sm>
+        <md-tooltip md-direction="bottom">
+          lt.linkedin.com/in/keligijus
+        </md-tooltip>
+        <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+      </md-button>
+
+      <md-button href="tel:0037061421011">
+        <md-tooltip md-direction="bottom">
+          00370 614 21011
+        </md-tooltip>
+        <i class="fa fa-phone-square fa-2x" aria-hidden="true"></i>
+      </md-button>
+
+      <md-button href="mailto:k.eligijus@gmail.com" hide show-gt-sm>
+        <md-tooltip md-direction="bottom">
+          keligijus@gmail.com
+        </md-tooltip>
+        <i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i>
+      </md-button>
+    </div>
   </div>
 </md-toolbar>
